CRSWKTDecoder for PROJGCS finalized.

--- a/src/main/java/org/geolatte/geom/crs/package.html
+++ b/src/main/java/org/geolatte/geom/crs/package.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-       TODO -- complete description
+      This package contains classes that model Coordinate Reference Systems. The model is based on the
+      "OpenGIS Implementation Specification: Coordinate Transformation Services" (rev. 1.00).
 </body>
 </html>
