Adds javadoc comments to crs package.

--- a/src/main/java/org/geolatte/geom/crs/package.html
+++ b/src/main/java/org/geolatte/geom/crs/package.html
@@ -6,6 +6,7 @@
 </head>
 <body>
       This package contains classes that model Coordinate Reference Systems. The model is based on the
-      "OpenGIS Implementation Specification: Coordinate Transformation Services" (rev. 1.00).
+      "OpenGIS Implementation Specification: Coordinate Transformation Services" (rev. 1.00). This document
+      is referred to as [CTS-1.00].
 </body>
 </html>
