--- a/src/main/java/org/geolatte/geom/package.html
+++ b/src/main/java/org/geolatte/geom/package.html
@@ -1,10 +1,46 @@
+<!--
+  ~ This file is part of the GeoLatte project.
+  ~
+  ~     GeoLatte is free software: you can redistribute it and/or modify
+  ~     it under the terms of the GNU Lesser General Public License as published by
+  ~     the Free Software Foundation, either version 3 of the License, or
+  ~     (at your option) any later version.
+  ~
+  ~     GeoLatte is distributed in the hope that it will be useful,
+  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~     GNU Lesser General Public License for more details.
+  ~
+  ~     You should have received a copy of the GNU Lesser General Public License
+  ~     along with GeoLatte.  If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (C) 2010 - 2011 and Ownership of code is shared by:
+  ~ Qmino bvba - Romeinsestraat 18 - 3001 Heverlee  (http://www.qmino.com)
+  ~ Geovise bvba - Generaal Eisenhowerlei 9 - 2140 Antwerpen (http://www.geovise.com)
+  -->
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title></title>
+    <title>Geolatte Geometry Library</title>
 </head>
 <body>
+
+<H1>Introduction</H1>
+
+<p>The Geolatte Geometry Library is based on the following open standards:</p>
+<ul>
+    <li>SQL/MM - part 3: Spatial (ISO/IEC 13249-3) </p></li>
+    <li><a href="http://portal.opengeospatial.org/files/?artifact_id=25355">Simple Feature Access - Part 1: common architecture</a></li>
+</ul>
+
+<!-- TODO expand with sections on how to create geometries, the PointSequence model, etc.-->
+<h1>PointSequences and Geometries</h1>
+
+<h1>Creating Geometries</h1>
+
+
 
 </body>
 </html>
