--- a/src/main/java/org/geolatte/geom/package.html
+++ b/src/main/java/org/geolatte/geom/package.html
@@ -27,6 +27,8 @@
 </head>
 <body>
 
+<p>A model for geospatial geometries.</p>
+
 <H1>Introduction</H1>
 
 <p>The Geolatte Geometry Library is based on the following open standards:</p>
