--- a/src/main/java/org/geolatte/geom/package.html
+++ b/src/main/java/org/geolatte/geom/package.html
@@ -33,7 +33,7 @@
 
 <p>The Geolatte Geometry Library is based on the following open standards:</p>
 <ul>
-    <li>SQL/MM - part 3: Spatial (ISO/IEC 13249-3) </p></li>
+    <li>SQL/MM - part 3: Spatial (ISO/IEC 13249-3)</li>
     <li><a href="http://portal.opengeospatial.org/files/?artifact_id=25355">Simple Feature Access - Part 1: common architecture</a></li>
 </ul>
 
